--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Sort</title> <!-- Changed Title -->
+    <title>Sand Sort</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Color Sort</h1> <!-- Changed Title -->
+    <h1>Sand Sort</h1>
 
     <div class="game-info">
         <div class="info-left">
             <span id="level-up-arrow" class="level-up-arrow">⬆️</span>
+            <!-- Level and number on the same line -->
             Level: <span id="level-number">1</span>
         </div>
         <div class="info-center">
-            <!-- Only Restart button group remains, CSS centers it -->
+            <!-- Undo button group removed -->
             <div class="button-group">
                 <button id="restart-button" title="Restart level">🔄</button>
                 <span class="button-cost">-<span id="restart-cost-val">10</span> 🪙</span>
