--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Sand Sort</h1>
+    <h1>Color Sort</h1>
 
     <div class="game-info">
         <div class="info-left">
